// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/common/ItemList > should render children 1`] = `
.c0 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border-bottom: 1px solid #c0c0c0;
}

.c1:last-child {
  border-bottom: none;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      <span>
        1
      </span>
    </li>
    <li
      class="c1"
    >
      <span>
        2
      </span>
    </li>
    <li
      class="c1"
    >
      <span>
        3
      </span>
    </li>
  </ul>
</div>
`;

exports[`components/common/ItemList > should render correctly 1`] = `
.c0 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border-bottom: 1px solid #c0c0c0;
}

.c1:last-child {
  border-bottom: none;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      CONTENT
    </li>
  </ul>
</div>
`;

exports[`components/common/ItemList > should render loading state 1`] = `
.c0 {
  opacity: 0.5;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border-bottom: 1px solid #c0c0c0;
}

.c1:last-child {
  border-bottom: none;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      CONTENT
    </li>
  </ul>
</div>
`;

exports[`components/common/ItemList > should render nothing when no children 1`] = `<div />`;
